<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/main_title"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sudokuRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/calcProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/sudokuRecyclerView"
            app:layout_constraintEnd_toEndOf="@id/sudokuRecyclerView"
            app:layout_constraintTop_toBottomOf="@id/sudokuRecyclerView"
            style="?android:attr/progressBarStyleHorizontal"/>

        <TextView
            android:id="@+id/calcCountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/calcProgress"
            app:layout_constraintEnd_toEndOf="@id/calcProgress"
            app:layout_constraintTop_toTopOf="@id/calcProgress"
            app:layout_constraintBottom_toBottomOf="@id/calcProgress"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calcProgress">

            <Button
                android:id="@+id/backupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_backup"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lockBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/lockBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_lock"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toEndOf="@id/backupBtn"
                app:layout_constraintEnd_toStartOf="@id/emptyBtn"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/emptyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_empty"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toEndOf="@id/lockBtn"
                app:layout_constraintEnd_toStartOf="@id/checkBtn"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/checkBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_check"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toEndOf="@id/emptyBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/restoreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_restore"
                app:layout_constraintStart_toStartOf="@id/backupBtn"
                app:layout_constraintTop_toBottomOf="@id/backupBtn"/>

            <Button
                android:id="@+id/unlockBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_unlock"
                app:layout_constraintStart_toStartOf="@id/lockBtn"
                app:layout_constraintTop_toBottomOf="@id/lockBtn"/>

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_clear"
                app:layout_constraintStart_toStartOf="@id/emptyBtn"
                app:layout_constraintTop_toBottomOf="@id/emptyBtn"/>

            <Button
                android:id="@+id/candidateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_candidate"
                app:layout_constraintStart_toStartOf="@id/checkBtn"
                app:layout_constraintTop_toBottomOf="@id/checkBtn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:src="@drawable/ic_calc"
        android:contentDescription="@string/main_calc"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>